fixed submenu z-index

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -100,6 +100,7 @@ $iesupport: true;
             position: absolute;
             top: 100%;
             left: 0;
+            z-index: 9999;
 
             a {
                 width: 150px;
